- Add the final  button and the background image

--- a/app/pages/home/home.html
+++ b/app/pages/home/home.html
@@ -1,12 +1,3 @@
-<ion-header>
-  <ion-navbar>
-    <ion-title>Home</ion-title>
-  </ion-navbar>
-</ion-header>
-
 <ion-content padding class="home">
-  <h2>Elza bot</h2>
-  <div class="coffee-button">
-    <span>Avisa a galera</span>
-  </div>
+    <button class="coffee-button" (click)="screenForCoffee()">ENVIAR!</button>  
 </ion-content>
