--- a/app/pages/home/home.html
+++ b/app/pages/home/home.html
@@ -1,3 +1,3 @@
 <ion-content padding class="home">
-    <button class="coffee-button" (click)="screenForCoffee()">ENVIAR!</button>  
+    <button class="coffee-button" (click)="screenForCoffee()" [disabled]="timeout" >{{buttonValue}}</button>  
 </ion-content>
